[package]
name = "wikimedia-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive", "env"] }
clap_complete = "4.1.4"
hex = "0.4.3"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["gzip", "stream"] }
scraper = "0.15.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.93"
sha1 = "0.10.5"
tokio = { version = "1.26.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "tracing"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "time"] }

[profile.release]
# strip = true
