[package]
name = "wikimedia-downloader"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fluffysquirrels/wikimedia-downloader"
description = "Download and view data from wikimedia sites."

include = [
    ".cargo/config.toml",
    "capnp/**",
    "Cargo.lock",
    "Cargo.toml",
    "src/**/*.rs",
    "web-templates/**",
]

[[bin]]
name = "wmd"
path = "src/main.rs"

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.11", features = ["headers", "http2", "macros", "query"] }
bzip2 = "0.4.4"
capnp = "0.16.1"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive", "env", "string"] }
clap_complete = "4.1.4"
crossbeam-utils = "0.8.15"
encoding_rs = "0.8"
fd-lock = "3.0.10"
futures = "0.3.27"
hex = "0.4.3"
html-escape = "0.2.13"
http-cache-reqwest = "0.8.0"
human_format = "1.0.3"
indicatif = "0.17.3"
iterator-ext = "0.2.1"
lz4_flex = "0.10.0"
maplit = "1.0.2"
memmap2 = "0.5.10"
mime = "0.3.16"
natord = "1.0.9"
once_cell = "1.17.1"
open = "4.0.1"
platform-dirs = "0.3.0"
progress-streams = "1.1.0"
quick-xml = "0.27.1"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["gzip", "stream"] }
reqwest-middleware = "0.2.1"
rusqlite = { version = "0.28.0", features = ["blob", "bundled", "chrono", "trace", "unlock_notify", "url"] }
scraper = "0.15.0"
sea-query = { version = "0.28.3", default-features = false, features = ["attr", "backend-sqlite", "derive", "thread-safe", "with-chrono"] }
sea-query-rusqlite = { version = "0.2.0", features = ["with-chrono"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.93"
sha1 = { version = "0.10.5", features = ["asm"] }
tokio = { version = "1.26.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time", "tracing"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.0", features = ["catch-panic", "sensitive-headers", "trace"] }
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-bunyan-formatter = { version = "0.3.6", features = ["valuable"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "time"] }
valuable = { version = "0.1.0", features = ["derive"] }
valuable-serde = "0.1.0"

[profile.release]
# strip = true

[patch.crates-io]
tracing-bunyan-formatter = { git = "https://github.com/fluffysquirrels/tracing-bunyan-formatter", branch = "valuable" }
