[package]
name = "wikimedia-download"
description = "CLI tool to download and view Wikimedia data."
documentation = "https://docs.rs/wikimedia-download"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "wmd"
path = "src/main.rs"

[dependencies]

# Crates in the workspace
wikimedia.workspace = true
wikimedia-store.workspace = true

anyhow.workspace = true
askama.workspace = true
askama_axum.workspace = true
axum.workspace = true
bzip2.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
futures.workspace = true
http-cache-reqwest.workspace = true
indicatif.workspace = true
once_cell.workspace = true
open.workspace = true
platform-dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
valuable.workspace = true
