[package]
name = "wikimedia-store"
description = "Indexed, fast local storage of wikimedia data."

authors.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]

# Crates in the workspace
wikimedia.workspace = true

ammonia.workspace = true
anyhow.workspace = true
askama.workspace = true
askama_axum.workspace = true
axum.workspace = true
bzip2.workspace = true
capnp.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossbeam-utils.workspace = true
derive_builder.workspace = true
encoding_rs.workspace = true
fd-lock.workspace = true
futures.workspace = true
hex.workspace = true
html-escape.workspace = true
http-cache-reqwest.workspace = true
human_format.workspace = true
indicatif.workspace = true
iterator-ext.workspace = true
lz4_flex.workspace = true
maplit.workspace = true
memmap2.workspace = true
mime.workspace = true
natord.workspace = true
once_cell.workspace = true
open.workspace = true
platform-dirs.workspace = true
progress-streams.workspace = true
quick-xml.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
rusqlite.workspace = true
scraper.workspace = true
sea-query.workspace = true
sea-query-rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
valuable.workspace = true
valuable-serde.workspace = true
