[package]
name = "wikimedia-store"
description = "Indexed, fast local storage of wikimedia data."
documentation = "https://docs.rs/wikimedia-store"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]

# Crates in the workspace
wikimedia.workspace = true

anyhow.workspace = true
capnp.workspace = true
chrono.workspace = true
crossbeam-utils.workspace = true
derive_builder.workspace = true
fd-lock.workspace = true
memmap2.workspace = true
once_cell.workspace = true
rayon.workspace = true
regex.workspace = true
rusqlite.workspace = true
sea-query.workspace = true
sea-query-rusqlite.workspace = true
serde.workspace = true
tracing.workspace = true
valuable.workspace = true
